--- a/finalproject.qmd
+++ b/finalproject.qmd
@@ -263,6 +263,10 @@ m4_aug <- augment(m4)
 rmse(m4_aug, truth = `log_gross`, estimate = .fitted)
 
 ```
+While adjusting for the random intercept based on country variable and holding all other variables constant, we noticed that the estimated variance is 0.1623 which means that all the country-specific intercept is distributed around the model's overall intercept within estimated variance of 0.1623, given that our unit is log dollars, and our estimated variance is quite small, we may expect that the country is similar. In terms of our interest in knowing whether a movie is successful or not, production of country may not be a big effect on the movie's success.
+
+Since we noticed that genre has the smallest estimated variance (0.08254), we may say that compared to the difference between ratings and countries, the difference between genres is smaller, while rating has the biggest difference. Given that our unit is log dollars, and all of our estimated variance is quite small, the differences between these variables should be similar to each other. 
+
 ```{r model-compare, message = F, warning = F}
 library(lme4)
 r.rmse4 <- sqrt(mean(residuals(m4)^2))
@@ -272,9 +276,27 @@ r.rmse5
 ```
 Compare model: since we can see that for linear regression, it has smaller RMSE as 1.3523 < 1.3575. We would conclude that model 1 is better than better 2 (linear regression better than the linear mixed model). However, the difference between RMSE is subtle. 
 
-While adjusting for the random intercept based on country variable and holding all other variables constant, we noticed that the estimated variance is 0.1623 which means that all the country-specific intercept is distributed around the model's overall intercept within estimated variance of 0.1623, given that our unit is log dollars, and our estimated variance is quite small, we may expect that the country is similar. In terms of our interest in knowing whether a movie is successful or not, production of country may not be a big effect on the movie's success.
+# interaction terms
+Since we conclude that the linear regression is better, we continue to apply linear regression and we're curious about whether the relationship between gross and budget depends on score/votes, while adjusting for all other variables. 
 
-Since we noticed that genre has the smallest estimated variance (0.08254), we may say that compared to the difference between ratings and countries, the difference between genres is smaller, while rating has the biggest difference. Given that our unit is log dollars, and all of our estimated variance is quite small, the differences between these variables should be similar to each other. 
+```{r interact-score, message = F, warning = F}
+lm(formula = log_gross ~ budget + genre + rating + score + votes + runtime + country + budget * score, data = data)
+
+lm(formula = log_gross ~ budget + genre + rating + score + votes + runtime + country + budget * votes, data = data)
+```
+
+For interaction terms: 
+The coefficient for score is 3.320e-01 and the coefficient for votes is 5.073e-06. Since the coefficient for votes is too low, we would only consider score here. 
+
+
+
+```{r interact-votes, message = F, warning = F}
+library(lme4)
+r.rmse4 <- sqrt(mean(residuals(m4)^2))
+r.rmse5 <- sqrt(mean(residuals(m5)^2))
+r.rmse4
+r.rmse5
+```
 
 ## Interested Hypothesis Test 1:
 Question 1: Is there evidence to suggest that log(Budget) has an effect on the success of the movies?
